# ITMO-SE-y29-1_labwork-5

./: .gitignore  CMakeLists.txt  README_EN_3.md  notes.txt  ru_README.md  task_README.md
examples/: badapple.txt  badhand.txt  ghoul.txt  lick.txt  memory.txt  once.txt  sweden.txt  virtual.txt
lib/: CMakeLists.txt  defines.cpp  defines.hpp  fileparser.cpp  filepaser.hpp  wavwriter.cpp  wavwriter.hpp
lib/effects/: echo.cpp  echo.hpp  effect.cpp  effect.hpp  gain.cpp  gain.hpp  tremolo.cpp  tremolo.hpp
lib/instruments/: instrument.cpp  instrument.hpp  oscillator.cpp  oscillator.hpp  sampler.cpp  sampler.hpp  sine.cpp  sine.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
